...
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways"
            app:title="@string/toolbar_title" />

        <View
...
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <com.example.application.ui.customviews.ColorPickerView
                android:id="@+id/colorPicker"
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize"/>

        </HorizontalScrollView>

    </com.google.android.material.appbar.AppBarLayout>
...
